--- a/test0.ipynb
+++ b/test0.ipynb
@@ -23397,6 +23397,91 @@
       "|    ent_coef_loss   | 4.67      |\n",
       "|    learning_rate   | 0.001     |\n",
       "|    n_updates       | 157909    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1095      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 9691      |\n",
+      "|    total_timesteps | 108405    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.28e+11 |\n",
+      "|    critic_loss     | 4.29e+09  |\n",
+      "|    ent_coef        | 2.16e+07  |\n",
+      "|    ent_coef_loss   | -6.38     |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 158404    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1100      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 9738      |\n",
+      "|    total_timesteps | 108900    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.32e+11 |\n",
+      "|    critic_loss     | 4.4e+09   |\n",
+      "|    ent_coef        | 2.21e+07  |\n",
+      "|    ent_coef_loss   | 1.51      |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 158899    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1105      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 9786      |\n",
+      "|    total_timesteps | 109395    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.37e+11 |\n",
+      "|    critic_loss     | 3.77e+09  |\n",
+      "|    ent_coef        | 2.28e+07  |\n",
+      "|    ent_coef_loss   | 6.99      |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 159394    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1110      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 9834      |\n",
+      "|    total_timesteps | 109890    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.52e+11 |\n",
+      "|    critic_loss     | 4.54e+09  |\n",
+      "|    ent_coef        | 2.28e+07  |\n",
+      "|    ent_coef_loss   | -5.79     |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 159889    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1115      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 9881      |\n",
+      "|    total_timesteps | 110385    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.61e+11 |\n",
+      "|    critic_loss     | 4.23e+09  |\n",
+      "|    ent_coef        | 2.38e+07  |\n",
+      "|    ent_coef_loss   | -6.78     |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 160384    |\n",
       "----------------------------------\n"
      ]
     }
