--- a/test1.ipynb
+++ b/test1.ipynb
@@ -34602,6 +34602,91 @@
       "|    ent_coef_loss   | -4.96     |\n",
       "|    learning_rate   | 0.001     |\n",
       "|    n_updates       | 1041082   |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 10320     |\n",
+      "|    fps             | 9         |\n",
+      "|    time_elapsed    | 4391      |\n",
+      "|    total_timesteps | 1021778   |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.03e+09 |\n",
+      "|    critic_loss     | 8.02e+07  |\n",
+      "|    ent_coef        | 5.43e+05  |\n",
+      "|    ent_coef_loss   | 2.1       |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 1041577   |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 10325     |\n",
+      "|    fps             | 9         |\n",
+      "|    time_elapsed    | 4444      |\n",
+      "|    total_timesteps | 1022273   |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.12e+09 |\n",
+      "|    critic_loss     | 8.18e+07  |\n",
+      "|    ent_coef        | 5.54e+05  |\n",
+      "|    ent_coef_loss   | 3.11      |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 1042072   |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 10330     |\n",
+      "|    fps             | 9         |\n",
+      "|    time_elapsed    | 4496      |\n",
+      "|    total_timesteps | 1022768   |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.25e+09 |\n",
+      "|    critic_loss     | 8.53e+07  |\n",
+      "|    ent_coef        | 5.51e+05  |\n",
+      "|    ent_coef_loss   | -0.4      |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 1042567   |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 10335     |\n",
+      "|    fps             | 9         |\n",
+      "|    time_elapsed    | 4549      |\n",
+      "|    total_timesteps | 1023263   |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.31e+09 |\n",
+      "|    critic_loss     | 8.66e+07  |\n",
+      "|    ent_coef        | 5.65e+05  |\n",
+      "|    ent_coef_loss   | -1.81     |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 1043062   |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 10340     |\n",
+      "|    fps             | 9         |\n",
+      "|    time_elapsed    | 4601      |\n",
+      "|    total_timesteps | 1023758   |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.36e+09 |\n",
+      "|    critic_loss     | 8.98e+07  |\n",
+      "|    ent_coef        | 5.85e+05  |\n",
+      "|    ent_coef_loss   | -3.11     |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 1043557   |\n",
       "----------------------------------\n"
      ]
     }
