--- a/test2.ipynb
+++ b/test2.ipynb
@@ -51963,6 +51963,91 @@
       "|    ent_coef_loss   | -0.523   |\n",
       "|    learning_rate   | 0.001    |\n",
       "|    n_updates       | 2537467  |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 99       |\n",
+      "|    ep_rew_mean     | -42.6    |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 25435    |\n",
+      "|    fps             | 10       |\n",
+      "|    time_elapsed    | 5561     |\n",
+      "|    total_timesteps | 2518163  |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | -91.2    |\n",
+      "|    critic_loss     | 2.88     |\n",
+      "|    ent_coef        | 0.0183   |\n",
+      "|    ent_coef_loss   | -0.292   |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 2537962  |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 99       |\n",
+      "|    ep_rew_mean     | -45.2    |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 25440    |\n",
+      "|    fps             | 10       |\n",
+      "|    time_elapsed    | 5609     |\n",
+      "|    total_timesteps | 2518658  |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | -91.6    |\n",
+      "|    critic_loss     | 2.66     |\n",
+      "|    ent_coef        | 0.0166   |\n",
+      "|    ent_coef_loss   | 0.685    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 2538457  |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 99       |\n",
+      "|    ep_rew_mean     | -47.7    |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 25445    |\n",
+      "|    fps             | 10       |\n",
+      "|    time_elapsed    | 5661     |\n",
+      "|    total_timesteps | 2519153  |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | -90.3    |\n",
+      "|    critic_loss     | 2.92     |\n",
+      "|    ent_coef        | 0.0182   |\n",
+      "|    ent_coef_loss   | -2.49    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 2538952  |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 99       |\n",
+      "|    ep_rew_mean     | -46.4    |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 25450    |\n",
+      "|    fps             | 10       |\n",
+      "|    time_elapsed    | 5709     |\n",
+      "|    total_timesteps | 2519648  |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | -91      |\n",
+      "|    critic_loss     | 2.75     |\n",
+      "|    ent_coef        | 0.0214   |\n",
+      "|    ent_coef_loss   | 2.93     |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 2539447  |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 99       |\n",
+      "|    ep_rew_mean     | -48.9    |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 25455    |\n",
+      "|    fps             | 10       |\n",
+      "|    time_elapsed    | 5761     |\n",
+      "|    total_timesteps | 2520143  |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | -91.3    |\n",
+      "|    critic_loss     | 2.85     |\n",
+      "|    ent_coef        | 0.0194   |\n",
+      "|    ent_coef_loss   | -0.498   |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 2539942  |\n",
       "---------------------------------\n"
      ]
     }
