--- a/test1.ipynb
+++ b/test1.ipynb
@@ -748,6 +748,148 @@
     "    model.load_replay_buffer(f\"data/seed_{seed}/tqc_expert_pick_place\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: Oct 14 2023 15:44:17\n",
+      "/home/enhupgu/miniconda3/envs/roboverse1/lib/python3.8/site-packages/gym/spaces/box.py:127: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  logger.warn(f\"Box bound precision lowered by casting to {self.dtype}\")\n",
+      "/home/enhupgu/miniconda3/envs/roboverse1/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:174: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed a `seed` instead of using `Env.seed` for resetting the environment random number generator.\u001b[0m\n",
+      "  logger.warn(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse1/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:187: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed `options` to allow the environment initialisation to be passed additional information.\u001b[0m\n",
+      "  logger.warn(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse1/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:195: UserWarning: \u001b[33mWARN: The result returned by `env.reset()` was not a tuple of the form `(obs, info)`, where `obs` is a observation and `info` is a dictionary containing additional information. Actual type: `<class 'dict'>`\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cuda device\n",
+      "Wrapping the env with a `Monitor` wrapper\n",
+      "Wrapping the env in a DummyVecEnv.\n",
+      "Wrapping the env in a VecTransposeImage.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/enhupgu/miniconda3/envs/roboverse1/lib/python3.8/site-packages/stable_baselines3/common/vec_env/patch_gym.py:49: UserWarning: You provided an OpenAI Gym environment. We strongly recommend transitioning to Gymnasium environments. Stable-Baselines3 is automatically wrapping your environments in a compatibility layer, which could potentially cause issues.\n",
+      "  warnings.warn(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse1/lib/python3.8/site-packages/stable_baselines3/her/her_replay_buffer.py:394: UserWarning: The last trajectory in the replay buffer will be truncated.\n",
+      "If you are in the same episode as when the replay buffer was saved,\n",
+      "you should use `truncate_last_trajectory=False` to avoid that issue.\n",
+      "  warnings.warn(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse1/lib/python3.8/site-packages/gymnasium/core.py:311: UserWarning: \u001b[33mWARN: env.compute_reward to get variables from other wrappers is deprecated and will be removed in v1.0, to get this variable you can do `env.unwrapped.compute_reward` for environment variables or `env.get_wrapper_attr('compute_reward')` that will search the reminding wrappers.\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gymnasium as gym\n",
+    "import numpy as np\n",
+    "import roboverse\n",
+    "\n",
+    "from stable_baselines3 import TD3\n",
+    "from stable_baselines3.common.noise import NormalActionNoise, OrnsteinUhlenbeckActionNoise\n",
+    "from stable_baselines3 import DDPG, HerReplayBuffer\n",
+    "from sb3_contrib import TQC\n",
+    "from sb3_contrib.common.wrappers import TimeFeatureWrapper\n",
+    "from stable_baselines3.common.vec_env import VecNormalize\n",
+    "from stable_baselines3.common.vec_env import DummyVecEnv, SubprocVecEnv\n",
+    "from stable_baselines3.common.callbacks import EvalCallback, CheckpointCallback\n",
+    "from options.baselines.ppoc_int2.run_roboverse import train\n",
+    "\n",
+    "\n",
+    "env = roboverse.make(\"Widow250PickPlaceMultiObject-v0\",\n",
+    "                         gui=False,\n",
+    "                         observation_mode=\"pixels\",\n",
+    "                         transpose_image=False)\n",
+    "#env = TimeFeatureWrapper(env)\n",
+    "#env = DummyVecEnv([make_env(\"Widow250PickPlaceMultiObject-v0\", i) for i in range(4)])\n",
+    "obs = env.reset()\n",
+    "\n",
+    "model = TQC(env=env, batch_size=2048, buffer_size=200_000, gamma=0.95, learning_rate=0.001, policy='MultiInputPolicy',\n",
+    "             policy_kwargs=dict(net_arch=[512, 512, 512], n_critics=2),\n",
+    "             replay_buffer_class=HerReplayBuffer,\n",
+    "             replay_buffer_kwargs=dict(goal_selection_strategy='future', n_sampled_goal=4),\n",
+    "             tau=0.05, learning_starts=200, verbose=1)\n",
+    "model.load_replay_buffer(f\"data/seed_0/tqc_expert_pick_place\")\n",
+    "expert = model.replay_buffer\n",
+    "\n",
+    "sample = expert.sample(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample.dones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gymnasium as gym\n",
+    "import numpy as np\n",
+    "import roboverse\n",
+    "\n",
+    "from stable_baselines3 import TD3\n",
+    "from stable_baselines3.common.noise import NormalActionNoise, OrnsteinUhlenbeckActionNoise\n",
+    "from stable_baselines3 import DDPG, HerReplayBuffer\n",
+    "from sb3_contrib import TQC\n",
+    "from sb3_contrib.common.wrappers import TimeFeatureWrapper\n",
+    "from stable_baselines3.common.vec_env import VecNormalize\n",
+    "from stable_baselines3.common.vec_env import DummyVecEnv, SubprocVecEnv\n",
+    "from stable_baselines3.common.callbacks import EvalCallback, CheckpointCallback\n",
+    "from options.baselines.ppoc_int2.run_roboverse import train\n",
+    "\n",
+    "\n",
+    "env = roboverse.make(\"Widow250PickPlaceMultiObject-v0\",\n",
+    "                         gui=False,\n",
+    "                         observation_mode=\"pixels\",\n",
+    "                         transpose_image=False)\n",
+    "#env = TimeFeatureWrapper(env)\n",
+    "#env = DummyVecEnv([make_env(\"Widow250PickPlaceMultiObject-v0\", i) for i in range(4)])\n",
+    "obs = env.reset()\n",
+    "\n",
+    "model = TQC(env=env, batch_size=2048, buffer_size=200_000, gamma=0.95, learning_rate=0.001, policy='MultiInputPolicy',\n",
+    "             policy_kwargs=dict(net_arch=[512, 512, 512], n_critics=2),\n",
+    "             replay_buffer_class=HerReplayBuffer,\n",
+    "             replay_buffer_kwargs=dict(goal_selection_strategy='future', n_sampled_goal=4),\n",
+    "             tau=0.05, learning_starts=200, verbose=1)\n",
+    "model.load_replay_buffer(f\"data/seed_3/tqc_expert_pick_place\")\n",
+    "expert = model.replay_buffer\n",
+    "\n",
+    "train(env, num_timesteps=1000000, seed=1, num_options=4, app=\"\", saves=False,\n",
+    "          wsaves=False, epoch=0, dc=0, plots=False, w_intfc=True, switch=False,\n",
+    "          mainlr=1e-4, intlr=9e-5, piolr=1e-4, fewshot=False, expert=expert)"
+   ]
   }
  ],
  "metadata": {
