--- a/test0.ipynb
+++ b/test0.ipynb
@@ -23482,6 +23482,210 @@
       "|    ent_coef_loss   | -6.78     |\n",
       "|    learning_rate   | 0.001     |\n",
       "|    n_updates       | 160384    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1120      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 9928      |\n",
+      "|    total_timesteps | 110880    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.57e+11 |\n",
+      "|    critic_loss     | 4.04e+09  |\n",
+      "|    ent_coef        | 2.4e+07   |\n",
+      "|    ent_coef_loss   | 5.33      |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 160879    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1125      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 9975      |\n",
+      "|    total_timesteps | 111375    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.65e+11 |\n",
+      "|    critic_loss     | 4.17e+09  |\n",
+      "|    ent_coef        | 2.46e+07  |\n",
+      "|    ent_coef_loss   | 5.14      |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 161374    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1130      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 10024     |\n",
+      "|    total_timesteps | 111870    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.75e+11 |\n",
+      "|    critic_loss     | 4.61e+09  |\n",
+      "|    ent_coef        | 2.47e+07  |\n",
+      "|    ent_coef_loss   | 7.87      |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 161869    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1135      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 10072     |\n",
+      "|    total_timesteps | 112365    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.84e+11 |\n",
+      "|    critic_loss     | 4.67e+09  |\n",
+      "|    ent_coef        | 2.54e+07  |\n",
+      "|    ent_coef_loss   | -1.46     |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 162364    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1140      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 10121     |\n",
+      "|    total_timesteps | 112860    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.97e+11 |\n",
+      "|    critic_loss     | 4.59e+09  |\n",
+      "|    ent_coef        | 2.58e+07  |\n",
+      "|    ent_coef_loss   | -2.76     |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 162859    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1145      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 10169     |\n",
+      "|    total_timesteps | 113355    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.93e+11 |\n",
+      "|    critic_loss     | 4.52e+09  |\n",
+      "|    ent_coef        | 2.58e+07  |\n",
+      "|    ent_coef_loss   | -5.08     |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 163354    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1150      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 10216     |\n",
+      "|    total_timesteps | 113850    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -4.08e+11 |\n",
+      "|    critic_loss     | 4.69e+09  |\n",
+      "|    ent_coef        | 2.65e+07  |\n",
+      "|    ent_coef_loss   | 10.3      |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 163849    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1155      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 10267     |\n",
+      "|    total_timesteps | 114345    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -4.05e+11 |\n",
+      "|    critic_loss     | 4.72e+09  |\n",
+      "|    ent_coef        | 2.61e+07  |\n",
+      "|    ent_coef_loss   | -0.214    |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 164344    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1160      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 10314     |\n",
+      "|    total_timesteps | 114840    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -4.07e+11 |\n",
+      "|    critic_loss     | 4.29e+09  |\n",
+      "|    ent_coef        | 2.74e+07  |\n",
+      "|    ent_coef_loss   | 1.72      |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 164839    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1165      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 10363     |\n",
+      "|    total_timesteps | 115335    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -4.24e+11 |\n",
+      "|    critic_loss     | 5.44e+09  |\n",
+      "|    ent_coef        | 2.72e+07  |\n",
+      "|    ent_coef_loss   | -6.18     |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 165334    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1170      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 10411     |\n",
+      "|    total_timesteps | 115830    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -4.37e+11 |\n",
+      "|    critic_loss     | 4.91e+09  |\n",
+      "|    ent_coef        | 2.7e+07   |\n",
+      "|    ent_coef_loss   | -6.26     |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 165829    |\n",
+      "----------------------------------\n",
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 1175      |\n",
+      "|    fps             | 11        |\n",
+      "|    time_elapsed    | 10459     |\n",
+      "|    total_timesteps | 116325    |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -4.41e+11 |\n",
+      "|    critic_loss     | 4.85e+09  |\n",
+      "|    ent_coef        | 2.87e+07  |\n",
+      "|    ent_coef_loss   | -4.16     |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 166324    |\n",
       "----------------------------------\n"
      ]
     }
@@ -23558,7 +23762,70 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import gymnasium as gym\n",
+    "import numpy as np\n",
+    "import roboverse\n",
+    "\n",
+    "from stable_baselines3 import TD3\n",
+    "from stable_baselines3.common.noise import NormalActionNoise, OrnsteinUhlenbeckActionNoise\n",
+    "from stable_baselines3 import DDPG, HerReplayBuffer\n",
+    "from sb3_contrib import TQC\n",
+    "from sb3_contrib.common.wrappers import TimeFeatureWrapper\n",
+    "from stable_baselines3.common.vec_env import VecNormalize\n",
+    "from stable_baselines3.common.vec_env import DummyVecEnv, SubprocVecEnv\n",
+    "from stable_baselines3.common.callbacks import EvalCallback, CheckpointCallback\n",
+    "\n",
+    "\n",
+    "env = roboverse.make(\"Widow250PickPlace-v2\",\n",
+    "                         gui=False,\n",
+    "                         observation_mode=\"pixels\",\n",
+    "                         transpose_image=False)\n",
+    "#env = TimeFeatureWrapper(env)\n",
+    "#env = DummyVecEnv([make_env(\"Widow250PickPlace-v1\", i) for i in range(4)])\n",
+    "seed = 0\n",
+    "obs = env.reset()\n",
+    "\n",
+    "# Save a checkpoint every 1000 steps\n",
+    "checkpoint_callback = CheckpointCallback(\n",
+    "  save_freq=1000,\n",
+    "  save_path=f\"./data/seed_{seed}/\",\n",
+    "  name_prefix=\"tqc_model\",\n",
+    "  save_replay_buffer=False,\n",
+    "  save_vecnormalize=False,\n",
+    ")\n",
+    "\n",
+    "model = TQC(env=env, batch_size=2048, buffer_size=1_000_000, gamma=0.99, learning_rate=0.001, policy='MultiInputPolicy',\n",
+    "             policy_kwargs=dict(net_arch=[512, 512, 512], n_critics=2),\n",
+    "             replay_buffer_class=HerReplayBuffer,\n",
+    "             replay_buffer_kwargs=dict(goal_selection_strategy='future', n_sampled_goal=4),\n",
+    "             tau=0.05, learning_starts=0, verbose=1)\n",
+    "\n",
+    "#model = TQC.load(\"data/tqc\")\n",
+    "#model.set_env(env)\n",
+    "COLLECT=False\n",
+    "if COLLECT:\n",
+    "    collect_data(env, model, \"pickplace\", \"place_success_target\", 10000, 30)\n",
+    "    model.save_replay_buffer(f\"data/seed_{seed}/tqc_expert_pick_place\")\n",
+    "else:\n",
+    "    print(\"load_replay_buffer\")\n",
+    "    model.load_replay_buffer(f\"data/seed_{seed}/tqc_expert_pick_place\")\n",
+    "\n",
+    "print(\"start pre-training from buffer only\")\n",
+    "model.learn(total_timesteps=0, callback=checkpoint_callback, log_interval=5, tb_log_name=\"exp\", reset_num_timesteps = False, progress_bar=True)\n",
+    "model.train(gradient_steps=20000)\n",
+    "\n",
+    "print(\"start learning\")\n",
+    "model.learn(total_timesteps=480_000, callback=checkpoint_callback, log_interval=5, tb_log_name=\"exp\", reset_num_timesteps = False, progress_bar=True)\n",
+    "model.save(f\"data/seed_{seed}/tqc_pick_place\")\n",
+    "\n",
+    "print(\"load_replay_buffer\")\n",
+    "model.load_replay_buffer(f\"data/seed_{seed}/tqc_expert_pick_place\")\n",
+    "\n",
+    "model.learn(total_timesteps=500_000, callback=checkpoint_callback, log_interval=5, tb_log_name=\"exp\", reset_num_timesteps = False, progress_bar=True)\n",
+    "model.save(f\"data/seed_{seed}/tqc_pick_place\")\n",
+    "print(\"finish learning\")"
+   ]
   }
  ],
  "metadata": {
